--- a/assets/scss/components/_component.scss
+++ b/assets/scss/components/_component.scss
@@ -108,7 +108,7 @@
 
 .highlight {
     display: inline-block;
-    background: linear-gradient(transparent 80%, #FFE44B 80%);
+    background: linear-gradient(transparent 70%, #FFE44B 70%);
 }
 
 .underline-reveal {
