--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -484,6 +484,12 @@
             position: relative;
             z-index: 0;
         }
+        .highlight {
+            @include md {
+                line-height: 1.2;
+                margin: 1rem 0;
+            }
+        }
     }
 
     &__closing {
